--- a/your-day.html
+++ b/your-day.html
@@ -35,7 +35,7 @@
             <p>Cost <br>
                Place/Time
             </p>
-            <a class="secondary-content btn-floating right"><i class="material-icons">add</i></a>
+            <a class="secondary-content btn-floating right"><i class="material-icons" id="addEvent1">add</i></a>
           </li>
           <li class="collection-item avatar">
              <i class="material-icons circle black">event</i>
