--- a/index.html
+++ b/index.html
@@ -1,49 +1,78 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta http-equiv="X-UA-Compatible" content="ie=edge">
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta http-equiv="X-UA-Compatible" content="ie=edge">
 
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.100.2/css/materialize.min.css">
-    <link rel="stylesheet" href="style.css">
-    <script type="text/javascript" src="https://code.jquery.com/jquery-3.2.1.min.js"></script>
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.100.2/css/materialize.min.css">
+  <link rel="stylesheet" href="style.css">
+  <script type="text/javascript" src="https://code.jquery.com/jquery-3.2.1.min.js"></script>
 
-    <link href="https://fonts.googleapis.com/icon?family=Material+Icons"
-      rel="stylesheet">
-      <link href="https://fonts.googleapis.com/css?family=Hammersmith+One" rel="stylesheet">
-    <script src="logic.js"></script>
-<script src="https://www.gstatic.com/firebasejs/4.11.0/firebase.js"></script>
+  <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css?family=Hammersmith+One" rel="stylesheet">
 
-    <title>DayTrippr</title>
+  <title>DayTrippr</title>
 </head>
 
 <body>
-    <div id = "logo">
-        <!--add logo image-->
+  <div id="logo">
+    <!--add logo image-->
+  </div>
+
+  <!--Main Button-->
+  <div class="valign-wrapper">
+    <button onclick="$('#modal1').modal('open')" data-target="modal1" class="waves-effect waves-light btn modal-trigger btn-large center-align hoverable">Plan A
+      <br>Perfect Day
+      <i class="material-icons">near_me</i>
+    </button>
+  </div>
+
+  <!-- Modal Structure -->
+  <div id="modal1" class="modal modal-fixed-footer">
+    <div class="modal-content">
+      <h5>Tell us a little about yourself...</h5>
+      <form>
+        <div class="row">
+          <form class="col s12">
+            <div class="row">
+              <div class="input-field col s6">
+                <input id="first_name" type="text" class="validate">
+                <label for="first_name">First Name</label>
+              </div>
+              <div class="input-field col s6">
+                <input id="last_name" type="text" class="validate">
+                <label for="last_name">Last Name</label>
+              </div>
+            </div>
+            <div class="row">
+              <div class="input-field col s12">
+                <input id="email" type="email" class="validate">
+                <label for="email">Email</label>
+              </div>
+            </div>
+            <div class="row">
+              <div class="input-field col s12">
+                <input id="zipcode" type="number" class="validate">
+                <label for="zipcode">Zip Code</label>
+              </div>
+            </div>
+
+          </form>
+          <div class="modal-footer">
+            <a href="your-day.html" class="modal-action modal-close waves-effect waves-green btn-flat">Submit</a>
+          </div>
+        </div>
+
     </div>
 
- <div class="valign-wrapper">
-    <button data-target="modal1" class="waves-effect waves-light btn modal-trigger btn-large center-align hoverable">Plan A <br>Perfect Day
-            <i class="material-icons">near_me</i>
-    </button>
-</div> 
+    <script src="https://www.gstatic.com/firebasejs/4.11.0/firebase.js"></script>
+    <script type="text/javascript" src="materialize.min.js"></script>
+    <script src="logic.js"></script>
 
 
-<!-- Modal Structure -->
-<div id="modal1" class="modal modal-fixed-footer">
-  <div class="modal-content">
-    <h4>Modal Header</h4>
-    <p>A bunch of text</p>
-  </div>
-  <div class="modal-footer">
-    <a href="#!" class="modal-action modal-close waves-effect waves-green btn-flat ">Agree</a>
-  </div>
-</div>
-
-
-   
-<script type="text/javascript" src="materialize.min.js"></script>
 
 </body>
+
 </html>
