fixed a few small format issues

--- a/your-day.html
+++ b/your-day.html
@@ -10,6 +10,7 @@
      <!--Import materialize.css-->
     <link rel="stylesheet" type="text/css" href="style.css">
     <title>Document</title>
+    <script type="text/javascript" src="https://code.jquery.com/jquery-3.2.1.min.js"></script>
 </head>
 <body>
 
@@ -166,7 +167,9 @@
       
 
 <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.100.2/js/materialize.min.js"></script>
+<script src="https://www.gstatic.com/firebasejs/4.11.0/firebase.js"></script>
     
+<script src="logic.js"></script>   
 
 </body>
 </html>
