--- a/your-day.html
+++ b/your-day.html
@@ -26,32 +26,28 @@
 <div class="row"> <!-- Main Content Starts Here -->
 
   <div class="col s4"> <!-- First Column; Free-ish Events -->
-      <ul class="collection with-header">
-          <li class="collection-header"><h4>$-$$</h4></li>
+      <ul class="collection with-header" id="free">
+ <!--         <li class="collection-header"><h4>$-$$</h4></li>
           <li class="collection-item avatar">
-            <!-- Can we pull images from the api?? -->
             <img src="images/yuna.jpg" alt="image" class="circle">
-            <span class="title">Event</span>
+            <span class="title"></span>
             <p>Cost <br>
                Place/Time
             </p>
-            <a class="secondary-content btn-floating waves-effect waves-light right"><i class="material-icons">add</i></a>
           </li>
           <li class="collection-item avatar">
              <i class="material-icons circle black">event</i>
-            <span class="title">Event</span>
+            <span class="title"></span>
             <p>Cost <br>
                Place/Time
             </p>
-            <a class="secondary-content btn-floating waves-effect waves-light right"><i class="material-icons">add</i></a>
           </li>
           <li class="collection-item avatar">
               <i class="material-icons circle black">event</i>
-            <span class="title">Event</span>
+            <span class="title"></span>
             <p>Cost <br>
                Place/Time
             </p>
-            <a class="secondary-content btn-floating waves-effect waves-light right"><i class="material-icons">add</i></a>
           </li>
           <li class="collection-item avatar">
             <i class="material-icons circle black">event</i>
@@ -59,22 +55,19 @@
             <p>Cost <br>
                Place/Time
             </p>
-             <a class="secondary-content btn-floating waves-effect waves-light right"><i class="material-icons">add</i></a>
-          </li>
+          </li>-->
       </ul> 
   </div>
   
   <div class="col s4"> <!-- Second Column; Affordable Events -->
-    <ul class="collection with-header">
-        <li class="collection-header"><h4>$$-$$$</h4></li>
+    <ul class="collection with-header" id="cheap">
+<!--        <li class="collection-header"><h4>$$-$$$</h4></li>
         <li class="collection-item avatar">
-          <!-- Can we pull images from the api?? -->
           <img src="images/yuna.jpg" alt="image" class="circle">
           <span class="title">Event</span>
           <p>Cost <br>
              Place/Time
           </p>
-          <a class="secondary-content btn-floating waves-effect waves-light right"><i class="material-icons">add</i></a>
         </li>
         <li class="collection-item avatar">
            <i class="material-icons circle black">event</i>
@@ -82,7 +75,6 @@
           <p>Cost <br>
              Place/Time
           </p>
-          <a class="secondary-content btn-floating waves-effect waves-light right"><i class="material-icons">add</i></a>
         </li>
         <li class="collection-item avatar">
             <i class="material-icons circle black">event</i>
@@ -90,30 +82,26 @@
           <p>Cost <br>
              Place/Time
           </p>
-          <a class="secondary-content btn-floating waves-effect waves-light right"><i class="material-icons">add</i></a>
         </li>
         <li class="collection-item avatar">
           <i class="material-icons circle black">event</i>
           <span class="title">Event</span>
           <p>Cost <br>
              Place/Time
-          </p>
-           <a class="secondary-content btn-floating waves-effect waves-light right"><i class="material-icons">add</i></a>
-        </li>
+          </p>>
+        </li> -->
     </ul> 
   </div>          
   
   <div class="col s4"><!-- Third Column; Pricey Events -->
-      <ul class="collection with-header">
-          <li class="collection-header"><h4>$$$-$$$$</h4></li>
+      <ul class="collection with-header" id="pricey"> 
+ <!--         <li class="collection-header"><h4>$$$-$$$$</h4></li>
           <li class="collection-item avatar">
-            <!-- Can we pull images from the api?? -->
             <img src="images/yuna.jpg" alt="image" class="circle">
             <span class="title">Event</span>
             <p>Cost <br>
                Place/Time
             </p>
-            <a class="secondary-content btn-floating waves-effect waves-light right" id="pickEvent"><i class="material-icons">add</i></a>
           </li>
           <li class="collection-item avatar">
              <i class="material-icons circle black">event</i>
@@ -121,15 +109,13 @@
             <p>Cost <br>
                Place/Time
             </p>
-            <a class="secondary-content btn-floating waves-effect waves-light  right"><i class="material-icons">add</i></a>
           </li>
           <li class="collection-item avatar">
               <i class="material-icons circle black">event</i>
             <span class="title">Event</span>
             <p>Cost <br>
                Place/Time
-            </p>
-            <a class="secondary-content btn-floating waves-effect waves-light right"><i class="material-icons">add</i></a>
+            </p>>
           </li>
           <li class="collection-item avatar">
             <i class="material-icons circle black">event</i>
@@ -137,8 +123,8 @@
             <p>Cost <br>
                Place/Time
             </p>
-             <a class="secondary-content btn-floating waves-effect waves-light  right"><i class="material-icons">add</i></a>
-          </li>
+
+          </li> -->
       </ul> 
   </div>
           
