--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
   </div>
 
   <!--Main Button-->
-  <div class="valign-wrapper">
+  <div class="valign-wrapper" id="start-button">
     <button onclick="$('#modal1').modal('open')" data-target="modal1" class="waves-effect waves-light btn modal-trigger btn-large center-align hoverable">Plan A
       <br>Perfect Day
       <i class="material-icons">near_me</i>
@@ -61,15 +61,253 @@
 
           </form>
           <div class="modal-footer">
-            <a href="your-day.html" class="modal-action modal-close waves-effect waves-green btn-flat">Submit</a>
+            <button id="submit-button" class="modal-action modal-close waves-effect waves-green btn-flat">Submit</button>
           </div>
         </div>
 
     </div>
+  </div>
 
-    <script src="https://www.gstatic.com/firebasejs/4.11.0/firebase.js"></script>
-    <script type="text/javascript" src="materialize.min.js"></script>
-    <script src="logic.js"></script>
+  <div id="your-day">
+    <nav>
+      <!-- Navbar starts here // IDEA: Color Reflects the weather? Add Javascript!!!-->
+      <div class="nav-wrapper" id="your-day-nav">
+        <a href="#" class="brand-logo">DayTrippr</a>
+        <div class="weather"></div>
+        <ul id="nav-mobile" class="right hide-on-med-and-down">
+          <li>
+            <a href="index.html">Home</a>
+          </li>
+        </ul>
+      </div>
+    </nav>
+    <!-- Navbar ends here -->
+
+    <div class="wrapper">
+      <!-- Beginning of .page-wrapper -->
+      <div class="row">
+        <!-- Main Content Starts Here -->
+
+        <div class="col s4">
+          <!-- First Column; Free-ish Events -->
+          <ul class="collection with-header" id="free">
+            <!-- Modal Trigger -->
+            <button onclick="$('#modal2').modal('open')" data-target="modal2" class="btn-hidden modal-trigger"></button>
+
+            <!-- Modal Structure -->
+            <div id="modal2" class="modal">
+              <div class="modal-content">
+                <li class="collection-header">
+                  <h4>An Event!</h4>
+                </li>
+                <li class="collection-item avatar">
+                  <img src="images/pexels-photo-196652.jpg" alt="image" class="circle">
+                  <span class="title"></span>
+                  <p>Cost
+                    <br> Place/Time
+                  </p>
+                </li>
+              </div>
+              <div class="modal-footer">
+                <a href="#!" class="modal-action modal-close waves-effect waves-green btn-flat">Add Event</a>
+              </div>
+            </div>
+            <!-- <li class="collection-header"><h4>$-$$</h4></li>
+            <li class="collection-item avatar">
+              <img src="images/yuna.jpg" alt="image" class="circle">
+              <span class="title"></span>
+              <p>Cost <br>
+                 Place/Time
+              </p>
+            </li>
+            <li class="collection-item avatar">
+               <i class="material-icons circle black">event</i>
+              <span class="title"></span>
+              <p>Cost <br>
+                 Place/Time
+              </p>
+            </li>
+            <li class="collection-item avatar">
+                <i class="material-icons circle black">event</i>
+              <span class="title"></span>
+              <p>Cost <br>
+                 Place/Time
+              </p>
+            </li>
+            <li class="collection-item avatar">
+              <i class="material-icons circle black">event</i>
+              <span class="title">Event</span>
+              <p>Cost <br>
+                 Place/Time
+              </p>
+            </li>-->
+          </ul>
+        </div>
+
+        <div class="col s4">
+          <!-- Second Column; Affordable Events -->
+          <ul class="collection with-header" id="cheap">
+
+            <!-- Modal Trigger -->
+            <button onclick="$('#modal3').modal('open')" data-target="modal2" class="btn-hidden modal-trigger"></button>
+
+            <!-- Modal Structure -->
+            <div id="modal3" class="modal">
+              <div class="modal-content">
+                <li class="collection-header">
+                  <h4>An Event!</h4>
+                </li>
+                <li class="collection-item avatar">
+                  <img src="images/pexels-photo-196652.jpg" alt="image" class="circle">
+                  <span class="title"></span>
+                  <p>Cost
+                    <br> Place/Time
+                  </p>
+                </li>
+              </div>
+              <div class="modal-footer">
+                <a href="#!" class="modal-action modal-close waves-effect waves-green btn-flat">Add Event</a>
+              </div>
+            </div>
+            <!--        <li class="collection-header"><h4>$$-$$$</h4></li>
+          <li class="collection-item avatar">
+            <img src="images/yuna.jpg" alt="image" class="circle">
+            <span class="title">Event</span>
+            <p>Cost <br>
+               Place/Time
+            </p>
+          </li>
+          <li class="collection-item avatar">
+             <i class="material-icons circle black">event</i>
+            <span class="title">Event</span>
+            <p>Cost <br>
+               Place/Time
+            </p>
+          </li>
+          <li class="collection-item avatar">
+              <i class="material-icons circle black">event</i>
+            <span class="title">Event</span>
+            <p>Cost <br>
+               Place/Time
+            </p>
+          </li>
+          <li class="collection-item avatar">
+            <i class="material-icons circle black">event</i>
+            <span class="title">Event</span>
+            <p>Cost <br>
+               Place/Time
+            </p>>
+          </li> -->
+          </ul>
+        </div>
+
+        <div class="col s4">
+          <!-- Third Column; Pricey Events -->
+          <ul class="collection with-header" id="pricey">
+
+            <!-- Modal Trigger -->
+            <button onclick="$('#modal4').modal('open')" data-target="modal2" class="btn-hidden modal-trigger"></button>
+
+            <!-- Modal Structure -->
+            <div id="modal4" class="modal">
+              <div class="modal-content">
+                <li class="collection-header">
+                  <h4>An Event!</h4>
+                </li>
+                <li class="collection-item avatar">
+                  <img src="images/pexels-photo-196652.jpg" alt="image" class="circle">
+                  <span class="title"></span>
+                  <p>Cost
+                    <br> Place/Time
+                  </p>
+                </li>
+              </div>
+              <div class="modal-footer">
+                <a href="#!" class="modal-action modal-close waves-effect waves-green btn-flat">Add Event</a>
+              </div>
+            </div>
+
+            <!--         <li class="collection-header"><h4>$$$-$$$$</h4></li>
+            <li class="collection-item avatar">
+              <img src="images/yuna.jpg" alt="image" class="circle">
+              <span class="title">Event</span>
+              <p>Cost <br>
+                 Place/Time
+              </p>
+            </li>
+            <li class="collection-item avatar">
+               <i class="material-icons circle black">event</i>
+              <span class="title">Event</span>
+              <p>Cost <br>
+                 Place/Time
+              </p>
+            </li>
+            <li class="collection-item avatar">
+                <i class="material-icons circle black">event</i>
+              <span class="title">Event</span>
+              <p>Cost <br>
+                 Place/Time
+              </p>>
+            </li>
+            <li class="collection-item avatar">
+              <i class="material-icons circle black">event</i>
+              <span class="title">Event</span>
+              <p>Cost <br>
+                 Place/Time
+              </p>
+  
+            </li> -->
+          </ul>
+        </div>
+
+      </div>
+    </div>
+    <!-- End of .container -->
+
+
+    <footer class="page-footer">
+      <!-- Footer Starts Here -->
+      <div class="container">
+
+        <div class="row">
+          <div class="col l12 s12">
+            <div id="footerText">
+              <h5 class="white-text left-align">Your Day</h5>
+              <div class="divider white"></div>
+              <div id="yourDay"></div>
+              <div id="events"></div>
+
+
+              <!-- Modal Structure -->
+              <div id="modal2" class="modal">
+                <div class="modal-content">
+                  <li class="collection-header">
+                    <h4>An Event!</h4>
+                  </li>
+                  <li class="collection-item avatar">
+                    <img src="images/pexels-photo-196652.jpg" alt="image" class="circle">
+                    <span class="title"></span>
+                    <p>Cost
+                      <br> Place/Time
+                    </p>
+                  </li>
+                </div>
+                <div class="modal-footer">
+                  <a href="#!" class="modal-action modal-close waves-effect waves-green btn-flat">Add Event</a>
+                </div>
+              </div>
+
+            </div>
+          </div>
+        </div>
+      </div>
+    </footer>
+  </div>
+
+
+  <script src="https://www.gstatic.com/firebasejs/4.11.0/firebase.js"></script>
+  <script type="text/javascript" src="materialize.min.js"></script>
+  <script src="logic.js"></script>
 
 
 
