--- a/index.html
+++ b/index.html
@@ -96,21 +96,23 @@
 
             <!-- Modal Structure -->
             <div id="modal2" class="modal">
-              <div class="modal-content">
-                <li class="collection-header">
-                  <h4>An Event!</h4>
-                </li>
-                <li class="collection-item avatar">
-                  <img src="images/pexels-photo-196652.jpg" alt="image" class="circle">
-                  <span class="title"></span>
-                  <p>Cost
-                    <br> Place/Time
-                  </p>
-                </li>
-              </div>
-              <div class="modal-footer">
-                <a href="#!" class="modal-action modal-close waves-effect waves-green btn-flat">Add Event</a>
-              </div>
+              <div class="modal-content" id="modal2content">
+                  <ul class="collection">
+                    <li class="collection-header">
+                      <h4>An Event!</h4>
+                    </li>
+                    <li class="collection-item avatar">
+                      <img src="images/pexels-photo-196652.jpg" alt="image" class="circle">
+                      <span class="title"></span>
+                      <p>Cost
+                      <br> Place/Time
+                      </p>
+                    </li>
+                  </ul>
+                </div>
+                <div class="modal-footer">
+                  <a href="#!" class="modal-action modal-close waves-effect waves-green btn-flat add-event">Add Event</a>
+                </div>
             </div>
             <!-- <li class="collection-header"><h4>$-$$</h4></li>
             <li class="collection-item avatar">
@@ -151,24 +153,24 @@
             <!-- Modal Trigger -->
             <button onclick="$('#modal3').modal('open')" data-target="modal2" class="btn-hidden modal-trigger"></button>
 
-            <!-- Modal Structure -->
-            <div id="modal3" class="modal">
-              <div class="modal-content">
-                <li class="collection-header">
-                  <h4>An Event!</h4>
-                </li>
+          <!-- Modal Structure -->
+          <div class="modal">
+            <div class="modal-content" id="modal3content">
+              <ul class="collection">
+                <li class="collection-header"><h4>An Event!</h4></li>
                 <li class="collection-item avatar">
                   <img src="images/pexels-photo-196652.jpg" alt="image" class="circle">
                   <span class="title"></span>
-                  <p>Cost
-                    <br> Place/Time
+                  <p>Cost <br>
+                    Place/Time
                   </p>
                 </li>
-              </div>
-              <div class="modal-footer">
-                <a href="#!" class="modal-action modal-close waves-effect waves-green btn-flat">Add Event</a>
-              </div>
+              </ul>
             </div>
+            <div class="modal-footer">
+              <a href="#!" class="modal-action modal-close waves-effect waves-green btn-flat add-event">Add Event</a>
+            </div>
+          </div>
             <!--        <li class="collection-header"><h4>$$-$$$</h4></li>
           <li class="collection-item avatar">
             <img src="images/yuna.jpg" alt="image" class="circle">
@@ -209,23 +211,24 @@
             <button onclick="$('#modal4').modal('open')" data-target="modal2" class="btn-hidden modal-trigger"></button>
 
             <!-- Modal Structure -->
-            <div id="modal4" class="modal">
-              <div class="modal-content">
-                <li class="collection-header">
-                  <h4>An Event!</h4>
-                </li>
-                <li class="collection-item avatar">
-                  <img src="images/pexels-photo-196652.jpg" alt="image" class="circle">
-                  <span class="title"></span>
-                  <p>Cost
-                    <br> Place/Time
-                  </p>
-                </li>
-              </div>
-              <div class="modal-footer">
-                <a href="#!" class="modal-action modal-close waves-effect waves-green btn-flat">Add Event</a>
-              </div>
-            </div>
+            <!-- Modal Structure -->
+      <div class="modal">
+        <div class="modal-content"  id="modal4content">
+            <ul>
+              <li class="collection-header"><h4>An Event!</h4></li>
+              <li class="collection-item avatar">
+              <img src="images/pexels-photo-196652.jpg" alt="image" class="circle">
+              <span class="title"></span>
+              <p>Cost <br>
+                Place/Time
+              </p>
+              </li>
+            </ul>
+          </div>
+        <div class="modal-footer">
+          <a href="#!" class="modal-action modal-close waves-effect waves-green btn-flat add-event">Add Event</a>
+        </div>
+      </div>
 
             <!--         <li class="collection-header"><h4>$$$-$$$$</h4></li>
             <li class="collection-item avatar">
@@ -268,38 +271,15 @@
     <footer class="page-footer">
       <!-- Footer Starts Here -->
       <div class="container">
-
-        <div class="row">
-          <div class="col l12 s12">
-            <div id="footerText">
+      <div class="row">
+        <div class="col l12 s12">
+          <div id="footerText">
               <h5 class="white-text left-align">Your Day</h5>
               <div class="divider white"></div>
-              <div id="yourDay"></div>
-              <div id="events"></div>
-
-
-              <!-- Modal Structure -->
-              <div id="modal2" class="modal">
-                <div class="modal-content">
-                  <li class="collection-header">
-                    <h4>An Event!</h4>
-                  </li>
-                  <li class="collection-item avatar">
-                    <img src="images/pexels-photo-196652.jpg" alt="image" class="circle">
-                    <span class="title"></span>
-                    <p>Cost
-                      <br> Place/Time
-                    </p>
-                  </li>
-                </div>
-                <div class="modal-footer">
-                  <a href="#!" class="modal-action modal-close waves-effect waves-green btn-flat">Add Event</a>
-                </div>
-              </div>
-
-            </div>
+              <ul id="events" class="collection"></ul>
           </div>
         </div>
+       </div>
       </div>
     </footer>
   </div>
