updated css/ js/ index

--- a/index.html
+++ b/index.html
@@ -17,8 +17,10 @@
 </head>
 
 <body>
+  
   <div id="logo">
-    <!--add logo image-->
+    <h2>DayTrippr</h2>
+   <!-- <img src="images/daytrippr-logo.png" alt="image"> -->
   </div>
 
   <!--Main Button-->
@@ -68,6 +70,7 @@
     </div>
   </div>
 
+  <header>
   <div id="your-day">
     <nav>
       <!-- Navbar starts here // IDEA: Color Reflects the weather? Add Javascript!!!-->
@@ -80,9 +83,10 @@
           </li>
         </ul>
       </div>
-    </nav>
-    <!-- Navbar ends here -->
+    </nav> <!-- Navbar ends here -->
+  </header>
 
+  <main>
     <div class="wrapper">
       <!-- Beginning of .page-wrapper -->
       <div class="row">
@@ -114,6 +118,7 @@
                   <a href="#!" class="modal-action modal-close waves-effect waves-green btn-flat add-event">Add Event</a>
                 </div>
             </div>
+ 
             <!-- <li class="collection-header"><h4>$-$$</h4></li>
             <li class="collection-item avatar">
               <img src="images/yuna.jpg" alt="image" class="circle">
@@ -209,11 +214,10 @@
 
             <!-- Modal Trigger -->
             <button onclick="$('#modal4').modal('open')" data-target="modal2" class="btn-hidden modal-trigger"></button>
-
-            <!-- Modal Structure -->
-            <!-- Modal Structure -->
-      <div class="modal">
-        <div class="modal-content"  id="modal4content">
+            
+          <!-- Modal Structure -->
+          <div class="modal">
+            <div class="modal-content"  id="modal4content">
             <ul>
               <li class="collection-header"><h4>An Event!</h4></li>
               <li class="collection-item avatar">
@@ -224,7 +228,7 @@
               </p>
               </li>
             </ul>
-          </div>
+            </div>
         <div class="modal-footer">
           <a href="#!" class="modal-action modal-close waves-effect waves-green btn-flat add-event">Add Event</a>
         </div>
@@ -266,8 +270,9 @@
       </div>
     </div>
     <!-- End of .container -->
+  </main>
 
-
+  <div id="your-day">
     <footer class="page-footer">
       <!-- Footer Starts Here -->
       <div class="container">
@@ -282,6 +287,7 @@
        </div>
       </div>
     </footer>
+  </div>
   </div>
 
 
