Auto stash before merge of "maddie" and "origin/master"

--- a/index.html
+++ b/index.html
@@ -70,17 +70,25 @@
     </div>
   </div>
 
-  <header>
+
+<!--START YOUR-DAY CODE --> 
+
+
+
   <div id="your-day">
+  
     <nav>
       <!-- Navbar starts here // IDEA: Color Reflects the weather? Add Javascript!!!-->
       <div class="nav-wrapper" id="your-day-nav">
-        <a href="#" class="brand-logo">DayTrippr</a>
-        <div class="weather"></div>
+        <a href="index.html" class="brand-logo">DayTrippr</a>
+
         <ul id="nav-mobile" class="right hide-on-med-and-down">
-          <li>
-            <a href="index.html">Home</a>
-          </li>
+          <li id="weather" class="weather-temp"></li> 
+          <li id="weather" class="weather-desc"></li> 
+          <li id="weather" class="weather-wind"></li>
+
+
+
         </ul>
       </div>
     </nav> <!-- Navbar ends here -->
@@ -275,6 +283,8 @@
   <div id="your-day">
     <footer class="page-footer">
       <!-- Footer Starts Here -->
+
+      
       <div class="container">
       <div class="row">
         <div class="col l12 s12">
