--- a/index.html
+++ b/index.html
@@ -17,10 +17,10 @@
 </head>
 
 <body>
-  
+
   <div id="logo">
     <h2>DayTrippr</h2>
-   <!-- <img src="images/daytrippr-logo.png" alt="image"> -->
+    <!-- <img src="images/daytrippr-logo.png" alt="image"> -->
   </div>
 
   <!--Main Button-->
@@ -71,63 +71,65 @@
   </div>
 
 
-<!--START YOUR-DAY CODE --> 
+  <!--START YOUR-DAY CODE -->
 
 
 
   <div id="your-day">
-  
-    <nav>
-      <!-- Navbar starts here // IDEA: Color Reflects the weather? Add Javascript!!!-->
-      <div class="nav-wrapper" id="your-day-nav">
-        <a href="index.html" class="brand-logo">DayTrippr</a>
+    <header>
 
-        <ul id="nav-mobile" class="right hide-on-med-and-down">
-          <li id="weather" class="weather-temp"></li> 
-          <li id="weather" class="weather-desc"></li> 
-          <li id="weather" class="weather-wind"></li>
+      <nav>
+        <!-- Navbar starts here // IDEA: Color Reflects the weather? Add Javascript!!!-->
+        <div class="nav-wrapper" id="your-day-nav">
+          <a href="index.html" class="brand-logo">DayTrippr</a>
+
+          <ul id="nav-mobile" class="right hide-on-med-and-down">
+            <li id="weather" class="weather-temp"></li>
+            <li id="weather" class="weather-desc"></li>
+            <li id="weather" class="weather-wind"></li>
 
 
 
-        </ul>
-      </div>
-    </nav> <!-- Navbar ends here -->
-  </header>
+          </ul>
+        </div>
+      </nav>
+      <!-- Navbar ends here -->
 
-  <main>
-    <div class="wrapper">
-      <!-- Beginning of .page-wrapper -->
-      <div class="row">
-        <!-- Main Content Starts Here -->
 
-        <div class="col s4">
-          <!-- First Column; Free-ish Events -->
-          <ul class="collection with-header" id="free">
-            <!-- Modal Trigger -->
-            <button onclick="$('#modal2').modal('open')" data-target="modal2" class="btn-hidden modal-trigger"></button>
+      <main>
+        <div class="wrapper">
+          <!-- Beginning of .page-wrapper -->
+          <div class="row">
+            <!-- Main Content Starts Here -->
 
-            <!-- Modal Structure -->
-            <div id="modal2" class="modal">
-              <div class="modal-content" id="modal2content">
-                  <ul class="collection">
-                    <li class="collection-header">
-                      <h4>An Event!</h4>
-                    </li>
-                    <li class="collection-item avatar">
-                      <img src="images/pexels-photo-196652.jpg" alt="image" class="circle">
-                      <span class="title"></span>
-                      <p>Cost
-                      <br> Place/Time
-                      </p>
-                    </li>
-                  </ul>
+            <div class="col s4">
+              <!-- First Column; Free-ish Events -->
+              <div class="collection with-header" id="free">
+                <!-- Modal Trigger -->
+                <!-- <button onclick="$('#modal2').modal('open')" data-target="modal2" class="btn-hidden modal-trigger"></button> -->
+
+                <!-- Modal Structure -->
+                <div id="modal2" class="modal">
+                  <div class="modal-content" id="modal2content">
+                    <ul class="collection">
+                      <li class="collection-header">
+                        <h4>An Event!</h4>
+                      </li>
+                      <li class="collection-item avatar">
+                        <img src="images/pexels-photo-196652.jpg" alt="image" class="circle">
+                        <span class="title"></span>
+                        <p>Cost
+                          <br> Place/Time
+                        </p>
+                      </li>
+                    </ul>
+                  </div>
+                  <div class="modal-footer">
+                    <a href="#!" class="modal-action modal-close waves-effect waves-green btn-flat add-event">Add Event</a>
+                  </div>
                 </div>
-                <div class="modal-footer">
-                  <a href="#!" class="modal-action modal-close waves-effect waves-green btn-flat add-event">Add Event</a>
-                </div>
-            </div>
- 
-            <!-- <li class="collection-header"><h4>$-$$</h4></li>
+
+                <!-- <li class="collection-header"><h4>$-$$</h4></li>
             <li class="collection-item avatar">
               <img src="images/yuna.jpg" alt="image" class="circle">
               <span class="title"></span>
@@ -156,35 +158,37 @@
                  Place/Time
               </p>
             </li>-->
-          </ul>
-        </div>
-
-        <div class="col s4">
-          <!-- Second Column; Affordable Events -->
-          <ul class="collection with-header" id="cheap">
-
-            <!-- Modal Trigger -->
-            <button onclick="$('#modal3').modal('open')" data-target="modal2" class="btn-hidden modal-trigger"></button>
-
-          <!-- Modal Structure -->
-          <div class="modal">
-            <div class="modal-content" id="modal3content">
-              <ul class="collection">
-                <li class="collection-header"><h4>An Event!</h4></li>
-                <li class="collection-item avatar">
-                  <img src="images/pexels-photo-196652.jpg" alt="image" class="circle">
-                  <span class="title"></span>
-                  <p>Cost <br>
-                    Place/Time
-                  </p>
-                </li>
               </ul>
             </div>
-            <div class="modal-footer">
-              <a href="#!" class="modal-action modal-close waves-effect waves-green btn-flat add-event">Add Event</a>
-            </div>
-          </div>
-            <!--        <li class="collection-header"><h4>$$-$$$</h4></li>
+
+            <div class="col s4">
+              <!-- Second Column; Affordable Events -->
+              <ul class="collection with-header" id="cheap">
+
+                <!-- Modal Trigger -->
+                <button onclick="$('#modal3').modal('open')" data-target="modal2" class="btn-hidden modal-trigger"></button>
+
+                <!-- Modal Structure -->
+                <div class="modal">
+                  <div class="modal-content" id="modal3content">
+                    <ul class="collection">
+                      <li class="collection-header">
+                        <h4>An Event!</h4>
+                      </li>
+                      <li class="collection-item avatar">
+                        <img src="images/pexels-photo-196652.jpg" alt="image" class="circle">
+                        <span class="title"></span>
+                        <p>Cost
+                          <br> Place/Time
+                        </p>
+                      </li>
+                    </ul>
+                  </div>
+                  <div class="modal-footer">
+                    <a href="#!" class="modal-action modal-close waves-effect waves-green btn-flat add-event">Add Event</a>
+                  </div>
+                </div>
+                <!--        <li class="collection-header"><h4>$$-$$$</h4></li>
           <li class="collection-item avatar">
             <img src="images/yuna.jpg" alt="image" class="circle">
             <span class="title">Event</span>
@@ -213,36 +217,38 @@
                Place/Time
             </p>>
           </li> -->
-          </ul>
-        </div>
-
-        <div class="col s4">
-          <!-- Third Column; Pricey Events -->
-          <ul class="collection with-header" id="pricey">
-
-            <!-- Modal Trigger -->
-            <button onclick="$('#modal4').modal('open')" data-target="modal2" class="btn-hidden modal-trigger"></button>
-            
-          <!-- Modal Structure -->
-          <div class="modal">
-            <div class="modal-content"  id="modal4content">
-            <ul>
-              <li class="collection-header"><h4>An Event!</h4></li>
-              <li class="collection-item avatar">
-              <img src="images/pexels-photo-196652.jpg" alt="image" class="circle">
-              <span class="title"></span>
-              <p>Cost <br>
-                Place/Time
-              </p>
-              </li>
-            </ul>
+              </ul>
             </div>
-        <div class="modal-footer">
-          <a href="#!" class="modal-action modal-close waves-effect waves-green btn-flat add-event">Add Event</a>
-        </div>
-      </div>
 
-            <!--         <li class="collection-header"><h4>$$$-$$$$</h4></li>
+            <div class="col s4">
+              <!-- Third Column; Pricey Events -->
+              <ul class="collection with-header" id="pricey">
+
+                <!-- Modal Trigger -->
+                <button onclick="$('#modal4').modal('open')" data-target="modal2" class="btn-hidden modal-trigger"></button>
+
+                <!-- Modal Structure -->
+                <div class="modal">
+                  <div class="modal-content" id="modal4content">
+                    <ul>
+                      <li class="collection-header">
+                        <h4>An Event!</h4>
+                      </li>
+                      <li class="collection-item avatar">
+                        <img src="images/pexels-photo-196652.jpg" alt="image" class="circle">
+                        <span class="title"></span>
+                        <p>Cost
+                          <br> Place/Time
+                        </p>
+                      </li>
+                    </ul>
+                  </div>
+                  <div class="modal-footer">
+                    <a href="#!" class="modal-action modal-close waves-effect waves-green btn-flat add-event">Add Event</a>
+                  </div>
+                </div>
+
+                <!--         <li class="collection-header"><h4>$$$-$$$$</h4></li>
             <li class="collection-item avatar">
               <img src="images/yuna.jpg" alt="image" class="circle">
               <span class="title">Event</span>
@@ -272,32 +278,32 @@
               </p>
   
             </li> -->
-          </ul>
-        </div>
+              </ul>
+            </div>
 
-      </div>
-    </div>
-    <!-- End of .container -->
-  </main>
-
-  <div id="your-day">
-    <footer class="page-footer">
-      <!-- Footer Starts Here -->
-
-      
-      <div class="container">
-      <div class="row">
-        <div class="col l12 s12">
-          <div id="footerText">
-              <h5 class="white-text left-align">Your Day</h5>
-              <div class="divider white"></div>
-              <ul id="events" class="collection"></ul>
           </div>
         </div>
-       </div>
+        <!-- End of .container -->
+      </main>
+
+      <div id="your-day">
+        <footer class="page-footer">
+          <!-- Footer Starts Here -->
+
+
+          <div class="container">
+            <div class="row">
+              <div class="col l12 s12">
+                <div id="footerText">
+                  <h5 class="white-text left-align">Your Day</h5>
+                  <div class="divider white"></div>
+                  <ul id="events" class="collection"></ul>
+                </div>
+              </div>
+            </div>
+          </div>
+        </footer>
       </div>
-    </footer>
-  </div>
   </div>
 
 
