--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
             </div>
             <div class="row">
               <div class="input-field col s12">
-                <input id="login-password" type="text" class="validate">
+                <input id="login-password" type="password" class="validate">
                 <label for="login-password">Password</label>
               </div>
             </div>
@@ -114,7 +114,7 @@
       <nav>
         <!-- Navbar starts here // IDEA: Color Reflects the weather? Add Javascript!!!-->
         <div class="nav-wrapper" id="your-day-nav">
-          <a href="index.html" class="brand-logo">BeeBetter</a>
+          <a href="index.html" class="brand-logo">BeeBettr</a>
 
           <ul id="nav-mobile" class="right hide-on-med-and-down">
             <li id="weather" class="weather-temp"></li>
